--- a/qr-code-component-main/vercel.json
+++ b/qr-code-component-main/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "./",
-      "destination": "qr-code/qr-code-component-main/index.html"
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
